...
    <string name="accessibility">Accessibility</string>
    <string name="account">Account</string>
    <string name="admin">Admin</string>
    <string name="anonymous">Anonymous</string>
    <string name="apply">Apply</string>
    <string name="block">Block</string>
    <string name="cancel">Cancel</string>
    <string name="city">City</string>
    <string name="clear">Clear</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="description">Description</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="email_address">Email address</string>
    <string name="error">Error</string>
    <string name="first_name">First name</string>
...
    <string name="residency">Residency</string>
    <string name="restart">Restart</string>
    <string name="retry">Retry</string>
    <string name="review">Review</string>
    <string name="reviews">Reviews</string>
    <string name="room_type">Room Type</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="see_original">See original</string>
    <string name="size">Size</string>
    <string name="start_date">Start Date</string>
    <string name="starting">Starting</string>
    <string name="title">Title</string>
...
    <!-- EditReviewScreen -->
    <string name="edit_review_title">Edit Review</string>
    <string name="edit_review_invalid_form_text">Please complete all required fields (valid size, price, and starting date).</string>
    <string name="edit_review_invalid_size_text">Enter 1.0–1000.0 with one decimal (e.g., 18.5).</string>
    <string name="edit_review_invalid_price_text">Enter an integer between 1 and 10\'000.</string>
    <string name="edit_review_rating">Rating: </string>
    <string name="edit_review_delete_review">Delete review?</string>
    <string name="edit_review_delete_review_text">This will permanently delete your review. This action cannot be undone.</string>

    <!-- ReviewsByResidencyScreen -->
    <string name="reviews_by_residency_no_reviews_yet">No reviews yet.</string>
    <string name="reviews_by_residency_review">Review: </string>
    <string name="reviews_by_residency_posted_by">Posted by</string>
...
