...
                      showOfflineToast(context)
                    } else {
                      showDeleteConfirm = true
                    }
                  },
                  enabled = !isOffline,
                  modifier = Modifier.testTag("deleteButton")) {
                    Icon(
                        Icons.Default.Delete,
                        contentDescription = "Delete",
                        tint =
                            if (isOffline) MainColor.copy(alpha = Dimens.AlphaDisabled)
                            else MainColor)
...
